<resources>
    <string name="app_name">Spill the Tea</string>
    <string name="logo">logo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="feed">Feed</string>
    <string name="explore">Explore</string>
    <string name="profile">Profile</string>
    <string name="no_tea_message">Wow, much empty :(\n<b>Start spilling some tea now!</b></string>
    <string name="spill_tea">Spill Tea</string>
    <string name="profile_image">Profile Image</string>
    <string name="close_screen">Close Screen</string>
    <string name="spill_it">Spill it!</string>
    <string name="whats_up">What\'s up?</string>
    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="save">Save</string>
    <string name="hashtags">Hashtags</string>
    <string name="people">People</string>
    <string name="app_logo">App Logo</string>
    <string name="intro_text_1">A place to save your personal posts which stays on your device. Use</string>
    <string name="intro_hashtags">#hashtags</string>
    <string name="intro_people">\@people</string>
    <string name="intro_text_2">to organize your posts and explore later</string>
    <string name="get_started">Get Started</string>
    <string name="setup_profile">Setup Profile</string>
</resources>